--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hedenica/clean-node-api.git"
@@ -17,6 +28,8 @@
   },
   "homepage": "https://github.com/hedenica/clean-node-api#readme",
   "devDependencies": {
+    "husky": "^5.0.0-beta.0",
+    "lint-staged": "^10.5.0",
     "standard": "^15.0.1"
   }
 }
