--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/hedenica/clean-node-api#readme",
   "devDependencies": {
     "husky": "^5.0.0-beta.0",
+    "jest": "^26.6.1",
     "lint-staged": "^10.5.0",
     "standard": "^15.0.1"
   }
